--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
 	background-color: #777;
 	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 	font-size: 18px;
-	max-width: 960px;
+	width: 960px;
 	padding: 20px;
 	margin: auto;
 }
@@ -17,19 +17,19 @@ header, nav, footer {
 
 section {
 	background-color: #ebebeb;
-	max-width: 50%;
+	width: 495px;
 	padding: 20px;
-	margin-top: 7px;
-	margin-bottom: 7px;
+	margin: 7px 0px;
 	float: left;
 }
 
 aside {
 	background-color: #ebebeb;
-	max-width: 50%;
+	width: 375px;
+	height: 382px;
 	padding: 20px;
-	margin: 7px;
-	float: left;
+	margin: 7px 0px;
+	float: right;
 }
 
 article {
