--- a/style.css
+++ b/style.css
@@ -1,22 +1,28 @@
 body {
 	text-align: center;
-	background-color: #777;
+	background-color: #1a0000;
 	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 	font-size: 18px;
 	width: 960px;
 	padding: 20px;
 	margin: auto;
+	color: #ffffff;
 }
 
 header, nav, footer {
-	background-color: #ebebeb;
+	background-color: #ff0000;
 	padding: 20px;
 	margin-top: 7px;
 	margin-bottom: 7px;
 }
 
+a {
+	text-decoration: none;
+	color: #ffffff;
+}
+
 section {
-	background-color: #ebebeb;
+	background-color: #ff0000;
 	width: 495px;
 	padding: 20px;
 	margin: 7px 0px;
@@ -24,7 +30,7 @@ section {
 }
 
 aside {
-	background-color: #ebebeb;
+	background-color: #ff0000;
 	width: 375px;
 	height: 382px;
 	padding: 20px;
@@ -33,14 +39,14 @@ aside {
 }
 
 article {
-	background-color: #777;
+	background-color: #1a0000;
 	/*max-width: 400px;*/
 	padding: 20px;
 	margin: 7px auto;
 }
 
 h1, h2, h3, p {
-	background-color: #ebebeb;
+	background-color: #ff0000;
 	padding: 20px;
 	margin-top: 7px;
 	margin-bottom: 7px;
